# modforge

./: .gitignore  .progress_bar.cppm.swp  AverageQueue.cppm  BP.cppm  BigNumber.cppm  CMakeLists.txt  CNN.cppm  Camera.cppm  EventListener.cppm  File.cppm  Image.cppm  Json.cppm  LICENSE  Matrix.cppm  MemoryPool.cppm  Mouse.cppm  MultArray.cppm  NeLibConfig.cmake.in  NeuralNetwork.cppm  NeuralNetworkTool.cppm  Param.cppm  ProgressBar.cppm  README.md  Random.cppm  Signal.cppm  StringEncrypt.cppm  TerminalMenu.cppm  ThreadPool.cppm  Time.cppm  Timer.cppm  Video.cppm  args_parser.cppm  average_queue.cppm  bp.cppm  camera.cppm  cnn.cppm  console.cppm  cursor.cppm  directory.cppm  encoding.cppm  (+26 more)
examples/: CMakeLists.txt  main.cpp
examples/core/: use_average_queue.cpp  use_directory.cpp  use_range.cpp
examples/cv/: use_image.cpp
src/: CMakeLists.txt  args_parser.cppm  command.cppm  console.cppm  cursor.cppm  modforge.core.cppm  modforge.cppm  modforge.deep_learning.tools.cppm  progress.cppm  time.cppm  timer.cppm  window.cppm
src/core/: average_queue.cppm  command.cppm  console.cppm  directory.cppm  keyevent.cppm  lock_free_queue.cppm  modforge.core.cppm  progress_bar.cppm  range.cppm  static_serialize.cppm  tensor.cppm  thread_pool.cppm  time.cppm  timer.cppm  unlocked_queue.cppm
src/cv/: image.cppm  modforge.cv.cppm
src/deep_learning/: cnn.cppm  modforge.deep_learning.cppm  modforge.deep_learning.tools.cppm  tensor.cppm
tests/: CMakeLists.txt
tests/core/: test_average_queue.cpp  test_console.cpp  test_directory.cpp  test_progress_bar.cpp  test_range.cpp  test_static_serialize.cpp  test_time.cpp  test_timer.cpp
tests/cv/: test_image.cpp
